compiler/tests/fa/errors/slice_non_array_fa.salam
// EXPECT: خطا۰۲۱
// LANG: fa
تابع اصلی:
    متغیر x i32 = 5
    متغیر y خودکار = x[1:2]
    چاپ y
پایان
